# rest-api-rust

./: Cargo.toml
migrations/2019-12-11-151801_create_book/: up.sql
src/: main.rs  schema.rs  tokio_tcp.rs
src/consts/: mod.rs
src/db/: mod.rs
src/dto/: mod.rs
src/models/: book.rs
src/routes/: book.rs  general.rs  mod.rs
src/types/: response.rs
src/utils/: mod.rs  response.rs  validator.rs
