[package]
name = "tokio_test"
version = "0.1.0"
authors = ["Node <yuriy@innovaticx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.1.17"
hyper = "0.12.1"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"
env_logger = "0.5.3"
log = "0.4.1"
url = "2.1"